logs/22143804_stderr.txt
Traceback (most recent call last):
  File "/afs/ifh.de/user/s/steinrob/Desktop/python/stacking/RunLocal.py", line 28, in <module>
    from scripts.GenerationControl import GenerationControl
  File "/afs/ifh.de/user/s/steinrob/Desktop/python/stacking/scripts/GenerationControl.py", line 18, in <module>
    from scripts.LLh import LLh
  File "/afs/ifh.de/user/s/steinrob/Desktop/python/stacking/scripts/LLh.py", line 18, in <module>
    from scripts.Injector import Injector
  File "/afs/ifh.de/user/s/steinrob/Desktop/python/stacking/scripts/Injector.py", line 4, in <module>
    import RandomTools
  File "/afs/ifh.de/user/s/steinrob/Desktop/python/stacking/scripts/RandomTools.py", line 4, in <module>
    import time_models as tm
  File "/afs/ifh.de/user/s/steinrob/Desktop/python/stacking/scripts/time_models.py", line 99
    a_dict["tot_norm"] = 
                        ^
SyntaxError: invalid syntax
